# haystack-embedded

./: .gitignore  Cargo.toml  README.md
benches/: gemm.rs  gemv.rs  hamming_distance.rs
src/: constants.rs  lib.rs  main.rs  structures.rs
src/structures/: ann_tree.rs  dense_vector_list.rs  ferns_tree.rs  filters.rs  inverted_index.rs  metadata_index.rs  namespace_state.rs  tree.rs
src/structures/ann_tree/: k_modes.rs  node.rs  storage.rs
src/structures/ferns_tree/: k_modes.rs  node.rs  storage.rs
src/structures/tree/: node.rs  storage.rs
tests/: e2e.py  e2e2.py  e2e3.py  filters.rs  math.rs  trees.rs
